Fixing images import

--- a/src/components/AccueilSection/style.module.scss
+++ b/src/components/AccueilSection/style.module.scss
@@ -78,7 +78,7 @@
   position: absolute;
   left: -15%;
   top: -15%;
-  background: url("http://localhost:3000/photos/photoBeji.jpg");
+  background: url("./../../photos/photoBeji.jpg");
   background-size: 100%;
   background-position: center center;
   display: flex;
