--- a/src/pages/home/style.module.scss
+++ b/src/pages/home/style.module.scss
@@ -8,9 +8,8 @@
 	scroll-behavior: smooth;
 }
 .Main {
-  background-image: url("http://localhost:3000/photos/summonersrift.jpg");
+  background-image: url("./../../photos/summonersrift.jpg");
 	scroll-behavior: smooth;
-	//background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 
