--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,6 +1,13 @@
-$dark-black: #13181b;
-$green-dark: #2a2a17;
-$gray: #404138;
-$yellow: #edb852;
-$brown: #5a3e1e;
-$white : #fff;
+// $dark-black: #13181b;
+// $green-dark: #2a2a17;
+// $gray: #404138;
+// $yellow: #edb852;
+// $brown: #5a3e1e;
+// $white : #fff;
+
+$purple-color : #533E85;
+$dark-green : #488FB1;
+$Green-color : #4FD3C4;
+$Green-color-low : rgba(79, 211, 196,0.4);
+$light-green : #C1F8CF;
+$padding-container : 1.5em 4em;
