Add Transition and animations

--- a/src/sections/AboutMeSection/style.module.scss
+++ b/src/sections/AboutMeSection/style.module.scss
@@ -7,6 +7,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    animation-duration : 1.3s ;
+    animation-delay: 1.3s;
 }
 
 .Hello {
