Add About Me Section

--- a/src/sections/NavBar/style.module.scss
+++ b/src/sections/NavBar/style.module.scss
@@ -21,6 +21,13 @@
     font-size: 20px;
     margin: 0;
     cursor: pointer;
+    a {
+        color: $Green-color;
+    font-size: 20px;
+    margin: 0;
+    cursor: pointer;
+    text-decoration: none; 
+    }
 }
 
 .Menu {
@@ -67,4 +74,12 @@
 .MyCV:hover {
     transition: 0.5s ease-in-out;
     background: $Green-color-low
+}
+@media screen and (max-width : 852px) {
+    .Menu {
+        display: none;
+    }
+    .NavBar {
+        padding: 0 1em;
+    }
 }
