--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,30 @@
 @font-face {
-  font-family: 'Quantum';
-  src: local('Quantum'), url("/public/fonts/Quantum.otf") format('truetype');
+  font-family: "Quantum";
+  src: local("Quantum"), url("/public/fonts/Quantum.otf") format("truetype");
 }
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
 * {
-  font-family:"Quantum" ;
+  font-family: "Quantum";
   letter-spacing: 1px !important;
-  color : #CCD6F6;
+  color: #ccd6f6;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-	scroll-behavior: smooth;
-
+  scroll-behavior: smooth;
+  z-index: -1;
+  transition: 5s;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -35,23 +36,23 @@ code {
 .fadeup-enter {
   opacity: 0.01;
   transform: translateY(20px);
-  transition: opacity 300ms cubic-bezier(0.645,0.045,0.355,1), transform 300ms cubic-bezier(0.645,0.045,0.355,1);
+  transition: opacity 300ms, transform 300ms;
 }
 .fadeup-enter-active {
   opacity: 1;
   transform: translateY(0px);
-  transition: opacity 300ms cubic-bezier(0.645,0.045,0.355,1), transform 300ms cubic-bezier(0.645,0.045,0.355,1);
+  transition: opacity 300ms, transform 300ms;
 }
 /* Fade down */
 .fadedown-enter {
   opacity: 0.01;
   transform: translateY(-20px);
-  transition: opacity 300ms cubic-bezier(0.645,0.045,0.355,1), transform 300ms cubic-bezier(0.645,0.045,0.355,1);
+  transition: opacity 300ms, transform 300ms;
 }
 .fadedown-enter-active {
   opacity: 1;
   transform: translateY(0px);
-  transition: opacity 300ms cubic-bezier(0.645,0.045,0.355,1), transform 300ms cubic-bezier(0.645,0.045,0.355,1);
+  transition: opacity 300ms, transform 300ms;
 }
 /* Fade */
 .fade-enter {
@@ -59,12 +60,12 @@ code {
 }
 .fade-enter-active {
   opacity: 1;
-  transition: opacity 300ms cubic-bezier(0.645,0.045,0.355,1);
+  transition: opacity 300ms;
 }
 .fade-exit {
   opacity: 1;
 }
 .fade-exit-active {
   opacity: 0;
-  transition: opacity 300ms cubic-bezier(0.645,0.045,0.355,1);
+  transition: opacity 300ms;
 }
