--- a/src/sections/AboutMeSection/style.module.scss
+++ b/src/sections/AboutMeSection/style.module.scss
@@ -1,59 +1,89 @@
 @import "./../../style/variables.scss";
 
 .Container {
-    min-height: 100vh;
-    margin: auto;
-    width: 75%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    animation-duration : 1.3s ;
-    animation-delay: 1.3s;
+  min-height: 100vh;
+  margin: auto;
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  animation-duration: 1.3s;
+  animation-delay: 1.3s;
+  padding: 5em 0;
+p {
+  line-height: 1 !important;
+
+}
 }
 
 .Hello {
-    font-size: clamp(13px, 5vw, 16px);
-    margin: 0 !important;
-    color: $Green-color;
+  font-size: clamp(13px, 5vw, 16px);
+  margin: 0 !important;
+  color: $Green-color;
+  span {
+    color: $Green-color !important;
+  }
+  margin-bottom: 1% !important;
 }
 
 .Name {
-    font-size: clamp(40px, 8vw, 80px);
-    margin: 0 !important;
-    line-height: 1.3;
+  font-size: clamp(40px, 8vw, 80px);
+  margin: 0 !important;
+  line-height: 1.3;
 }
 
 .Title {
-    //color: $dark-green ;
-    opacity: 0.7;
-    margin: 0 !important;
-    font-size: clamp(30px, 6vw, 60px);
-    line-height: 1.3;
-
+  //color: $dark-green ;
+  opacity: 0.7;
+  margin: 0 !important;
+  font-size: clamp(30px, 6vw, 60px);
+  line-height: 1.3;
 }
 
 .Paragraph {
-    width: 50%;
-    margin-top: 3%;
-    line-height: 2;
+  width: 50%;
+  margin-top: 1.5%;
+  line-height: 2;
 }
 
 .button {
-    background-color: transparent;
-    color: $Green-color;
-    border-color: transparent;
-    padding: 0.75em 3.75em;
-    font-size: 13px;
-    border-radius: 5px;
-    border: 2.5px solid;
-    position: relative;
-    overflow: hidden;
-    transition: 0.5s ease-in;
-    width: fit-content;
-    ;
+  background-color: transparent;
+  color: $Green-color;
+  border-color: transparent;
+  padding: 0.75em 3.75em;
+  font-size: 13px;
+  border-radius: 5px;
+  border: 2.5px solid;
+  position: relative;
+  overflow: hidden;
+  transition: 0.5s ease-in;
+  width: fit-content;
+  //animation-duration: 0.3s; /* don't forget to set a duration! */
+  animation: Hidden 5s;
+  opacity: 1    ;
 }
 
+@keyframes Hidden {
+  0% {
+    opacity: 0;
+  }
+ 
+  100% {
+    opacity: 1;
+  }
+}
 .button:hover {
-    transition: 0.5s ease-in-out;
-    background: $Green-color-low
+  transition: 0.5s ease-in-out;
+  background: $Green-color-low;
+}
+
+@media screen and (max-width: 852px) {
+  .Paragraph {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .Container {
+    padding-top: 100px;
+  }
 }
