--- a/src/sections/Experience/style.module.scss
+++ b/src/sections/Experience/style.module.scss
@@ -1,14 +1,48 @@
+@import "./../../style/variables.scss";
 .Container {
-    min-height: 100vh;
-    margin: auto;
-    width: 75%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    animation-duration: 1.3s;
-    animation-delay: 1.3s;
-    padding: 5em 0;
+  min-height: 100vh;
+  margin: auto;
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  animation-duration: 1.3s;
+  animation-delay: 1.3s;
+  padding: 5em 0;
+}
+.Title {
+  font-size: 24px;
+}
+.PostTitle {
+  font-size: 18px;
+  span {
+    color: $Green-color;
   }
-  .Title {
-    font-size: 24px;
+}
+.ListDescription {
+  list-style: none !important;
+  margin: 1em 0;
+}
+.ListDescription::before {
+  content: "🖥️";
+}
+.Date {
+  font-size: 12px;
+  opacity: 0.8;
+  margin-bottom: 2em;
+}
+.VisitWebsite {
+  text-decoration: none !important;
+  color :$Green-color;
+}
+.Number  {
+  color : $Green-color;
+}
+@media screen and (max-width : 792px) {
+  .Container {
+    width: 90% !important;
   }
+  .PostTitle {
+    display: grid;
+  }
+}
