--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -5,9 +5,9 @@
 // $brown: #5a3e1e;
 // $white : #fff;
 
-$purple-color : #533E85;
-$dark-green : #488FB1;
-$Green-color : #4FD3C4;
+$purple-color : #2155CD;
+$dark-green : #0AA1DD;
+$Green-color : #79DAE8;
 $Green-color-low : rgba(79, 211, 196,0.4);
 $light-green : #C1F8CF;
 $padding-container : 1.5em 4em;
