Change color and description

--- a/src/components/projectCard/style.module.scss
+++ b/src/components/projectCard/style.module.scss
@@ -1,6 +1,6 @@
 @import "./../../style/variables.scss";
 .proContainer {
-  background-color: #0aa1dd;
+  background-color: #014ca6;
   border-radius: 6px;
   overflow: hidden;
   padding: 2em;
