--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,13 @@ html {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
+
 * {
-      font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
   letter-spacing: 1px !important;
   color: #ccd6f6;
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -29,6 +31,7 @@ code {
 .container {
   max-width: 1470px !important;
 }
+
 /*cubic-bezier(0.645,0.045,0.355,1)*/
 
 .fadeup-enter {
@@ -36,40 +39,49 @@ code {
   transform: translateY(20px);
   transition: opacity 300ms, transform 300ms;
 }
+
 .fadeup-enter-active {
   opacity: 1;
   transform: translateY(0px);
   transition: opacity 300ms, transform 300ms;
 }
+
 /* Fade down */
 .fadedown-enter {
   opacity: 0.01;
   transform: translateY(-20px);
   transition: opacity 300ms, transform 300ms;
 }
+
 .fadedown-enter-active {
   opacity: 1;
   transform: translateY(0px);
   transition: opacity 300ms, transform 300ms;
 }
+
 /* Fade */
 .fade-enter {
   opacity: 0;
 }
+
 .fade-enter-active {
   opacity: 1;
   transition: opacity 300ms;
 }
+
 .fade-exit {
   opacity: 1;
 }
+
 .fade-exit-active {
   opacity: 0;
   transition: opacity 300ms;
 }
+
 .HighLighted {
-  color :#4FD3C4;
+  color: #00ffe2;
 }
+
 abbr {
-  cursor: pointer !important ;
+  cursor: pointer !important;
 }
