--- a/src/sections/Contact/style.module.scss
+++ b/src/sections/Contact/style.module.scss
@@ -17,6 +17,7 @@
 }
 .Title {
   font-size: 24px;
+  
 }
 .CentredLine {
   margin: auto;
@@ -52,6 +53,12 @@
   color: $Green-color;
   border-color: transparent;
 
+}
+.Footer {
+  text-align: center;
+  margin: 0 !important;
+  font-size: 12px;
+  padding-bottom: 1em;
 }
 @media screen and (max-width : 792px) {
   .Container {
