--- a/src/components/EducationCards/style.module.scss
+++ b/src/components/EducationCards/style.module.scss
@@ -2,7 +2,7 @@
 
 
 .EduContainer {
-  margin-bottom: 3em;
+  margin-bottom: 4em;
 }
 .Title {
   font-size: 16px;
@@ -22,7 +22,7 @@
   padding: 1em;
   background-color: #014ca6;
   border-radius: 6px;
-  width: 75%;
+  width: 70%;
   font-size: 14px;
 }
 
@@ -30,4 +30,9 @@
 
 .DescriptionList {
   margin: 0 !important;
+}
+
+.date {
+  margin-top: 1em;
+  font-size: 10px;
 }
